Update to cstate v4
This updates the theme to cstate v4 and adds several config values that
are now required. In addition, it uses new features in v4 to update the
most recent planned maintenance issue to not affect the current status
of services so that if an issue occurs in the mean time it shows up and
doesn't require removing or "resolving" the planned maintenance.

--- a/themes/_cstate/exampleSite/netlify.toml
+++ b/themes/_cstate/exampleSite/netlify.toml
@@ -4,11 +4,14 @@
     functions = "functions"
 
 [build.environment]
-    HUGO_VERSION = "0.41"
+    HUGO_VERSION = "0.48"
 
 [context.production.environment]
     HUGO_ENV = "production"
     NODE_ENV = "production"
 
 [context.deploy-preview]
-    command = "hugo"
+    command = "hugo -b $DEPLOY_PRIME_URL"
+
+[context.branch-deploy]
+    command = "hugo -b $DEPLOY_PRIME_URL"
