--- a/config.yml
+++ b/config.yml
@@ -54,14 +54,31 @@ title: sr.ht status
 # Also: https://www.w3schools.com/tags/ref_language_codes.asp
 languageCode: en
 
+# What translation file should cState use?
+# You can also define whether missing
+# translations should get placeholders.
+#
+# For defaultContentLanguage—
+# Default: `en`
+#
+# For enableMissingTranslationPlaceholders—
+# do not set it to true for languages other
+# than English! When tested with Lithuanian,
+# it would add unnecesary placeholders to
+# values that were intentionally empty.
+defaultContentLanguage: en
+
 # What is the hostname or path to the root?
 # Where is the site hosted?
 #
-# Slash enables relative links.
+# ❗ cState & Hugo don’t support '/' in
+# production use. It will break RSS
+# feeds and breaks permalinks since
+# version 3. If you are just testing,
+# localhost should automatically work.
 #
-# Default: /
 # Example: https://status.example.com/
-baseURL: /
+baseURL: https://status.sr.ht/
 
 ############################################################
 # +------------------------------------------------------+ #
@@ -70,6 +87,31 @@ baseURL: /
 ############################################################
 
 params:
+  # Before setting up your systems, you need
+  # to first define at least one category.
+  #
+  # Categories are shown in the order that
+  # you define in this config file.
+  #
+  # Categories can have a:
+  # - name
+  # - description
+  # - closed boolean `closed: true`
+  #   That would collapse the category upon first load
+  #   and the user can expand by clicking on the category
+  #   (Requires JavaScript.)
+  # - untitled boolean `untitled: true`
+  #   This would complerely hide the name of the category.
+  #   This is useful, if you do not want to use categories
+  #   because you need to set an 'Uncategorized' category.
+  #   Or it can be used alongside other categories.
+  #
+  # For help, see the wiki:
+  # https://github.com/cstate/cstate/wiki/Customization
+  categories:
+    - name: Uncategorized
+      untitled: true
+
   # These are your systems. Change them to
   # change the amount of components.
   #
@@ -77,13 +119,21 @@ params:
   # https://github.com/mistermantas/cstate/wiki/Customization
   systems:
     - name: git.sr.ht
+      category: Uncategorized
     - name: builds.sr.ht
+      category: Uncategorized
     - name: todo.sr.ht
+      category: Uncategorized
     - name: lists.sr.ht
+      category: Uncategorized
     - name: man.sr.ht
+      category: Uncategorized
     - name: dispatch.sr.ht
+      category: Uncategorized
     - name: meta.sr.ht
+      category: Uncategorized
     - name: paste.sr.ht
+      category: Uncategorized
 
   # What header design should we use?
   #
@@ -150,11 +200,17 @@ params:
   # warning: DC143C
   # down: FF8C00
   # notice: 708090
-  brand: 181818
-  ok: 228B22
-  disrupted: FF8C00
-  down: DC143C
-  notice: 708090
+  brand: "#fff"
+  ok: "#228B22"
+  disrupted: "#FF8C00"
+  down: "#DC143C"
+  notice: "#708090"
+
+  # This is not enabled because it has not been tested to make sure colors work
+  # and everything is readable.
+  # Someone who has their browser in dark mode may want to test it and remove
+  # this line in a future patch.
+  disableDarkMode: true
 
   # If the status page shows that
   # there are disruptions or outages
@@ -201,10 +257,6 @@ buildFuture: true
 # know what you are doing.
 theme: _cstate
 
-# This option tells cState what version
-# your config file is using.
-#
-# Never ever remove this, nor change it,
-# if you have not updated to any other
-# version.
-version: 2
+preserveTaxonomyNames: true
+taxonomies:
+  affected: affected
